src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: 'Almendra Regular';
    src: url('/fonts/Almendra/Almendra-Regular.ttf');
    font-weight: normal;
    font-display: swap;
  }

  @font-face {
    font-family: 'Almendra Bold';
    src: url('/fonts/Almendra/Almendra-Bold.ttf');
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-size: 20px;
  }

  h1, h2, h3, h4 {
    line-height: 100%;
    margin-bottom: 0.25em;
  }

  h1:not(:first-child),
  h2:not(:first-child),
  h3:not(:first-child),
  h4:not(:first-child) {
    margin-top: 2em;
  }

  h1, h2 {
    text-transform: uppercase;
  }

  p {
    margin-bottom: 1em;
  }
}

.backdrop {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.50)
}

.modal {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;

  /* allow click-through to backdrop */
  pointer-events: none;
}


/*
 * Home page title
 */
.home-title {
  position: relative;
  background: center / contain url('/images/title-mina-arena.png') no-repeat;
  height: 134px;
  text-indent: -1000em;
}


.text-gold {
  text-shadow: 0 2px 0 rgba(255,255,255,0.25);
}


.instructions {
  text-shadow: 0 0 8px rgb(0,0,0,0.2), 0 1px 0 rgb(255,255,255,1);
}

@layer utilities {
  ._input {
    border: 1px solid lightgrey;
    border-radius: 1px;
  }
}

